# mailio

./: CMakeLists.txt  meson.build
include/mailio/: export.hpp
